New code gen system for tool Moved away from getters/setters in parser as now accessors can be used(groovy didn't like them previously)